--- a/MVC/Views/Home/PrivateInstallation/PrivateInstallationConfirmation.cshtml
+++ b/MVC/Views/Home/PrivateInstallation/PrivateInstallationConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Saisie de mon installation privée - Confirmation";
-    var regNumber = ViewBag.RegistrationNumber ?? "9999999";
+    var regNumber = ViewBag.RegistrationNumber;
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
