--- a/MVC/Views/Home/PrivateInstallation/PrivateInstallation.cshtml
+++ b/MVC/Views/Home/PrivateInstallation/PrivateInstallation.cshtml
@@ -92,6 +92,34 @@
                                     <span asp-validation-for="Localite" class="text-danger"></span>
                                 </div>
                             </div>
+
+
+                            <div class="mb-4">
+                                <label class="form-label fw-bold">Direction :</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio"
+                                           asp-for="Direction" value="south" id="south">
+                                    <label class="form-check-label" for="south">Sud</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio"
+                                           asp-for="Direction" value="north" id="north">
+                                    <label class="form-check-label" for="north">Nord</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio"
+                                           asp-for="Direction" value="east" id="east">
+                                    <label class="form-check-label" for="east">Est</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio"
+                                           asp-for="Direction" value="west" id="west">
+                                    <label class="form-check-label" for="west">Ouest</label>
+                                </div>
+                            </div>
+
+
+
                             
 
                             <div class="d-flex justify-content-between mt-3">
