--- a/MVC/Views/Home/NER/PV/PV.cshtml
+++ b/MVC/Views/Home/NER/PV/PV.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "PV";
 }
 
-<h1>Home > NER > PV</h1>
+<h1><a asp-controller="Home" asp-action="Index">Home</a> > NER > PV</h1>
 
 @await Html.PartialAsync("_Menu")
+
+
