--- a/MVC/Views/Pv/Index.cshtml
+++ b/MVC/Views/Pv/Index.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Photovoltaïque";
 }
+
+<h1><a asp-controller="Home" asp-action="Index">Home</a> > NER > PV</h1>
+
 <h2>Production photovoltaïque</h2>
 <div id="pvChartContainer" style="max-width:800px;margin-top:20px;">
     <canvas id="pvChart"></canvas>
