--- a/MVC/Views/Home/NER/Biogaz/Biogaz.cshtml
+++ b/MVC/Views/Home/NER/Biogaz/Biogaz.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "Gaz";
 }
 
-<h1>Home > NER > Biogaz</h1>
+<h1><a asp-controller="Home" asp-action="Index">Home</a> > NER > Biogaz</h1>
 
 @await Html.PartialAsync("_Menu")
