--- a/MVC/Views/Home/NER/Eolien/Eolien.cshtml
+++ b/MVC/Views/Home/NER/Eolien/Eolien.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "Eolien";
 }
 
-<h1>Home > NER > Eolien</h1>
+<h1><a asp-controller="Home" asp-action="Index">Home</a> > NER > Eolien</h1>
 
 @await Html.PartialAsync("_Menu")
