--- a/MVC/Views/Home/NER/Mini-hydraulique/MiniHydraulique.cshtml
+++ b/MVC/Views/Home/NER/Mini-hydraulique/MiniHydraulique.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "Mini hydraulique";
 }
 
-<h1>Home > NER > Mini-hydraulique</h1>
+<h1><a asp-controller="Home" asp-action="Index">Home</a> > NER > Mini-hydraulique</h1>
 
 @await Html.PartialAsync("_Menu")
